Change program name

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="app">
     <header>
-      <div class="brand">RWJBarnabas HEALTH</div>
+      <div class="brand">RWJBH LifeFlight</div>
       <div class="datetime" id="datetime"></div>
     </header>
 
