move clear cache button to below airports

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,11 @@
       <div class="js-timeline"></div>
 
     </div>
+   
+    <div class="controls">
+      <button id="btn-clear-cache">Clear Cache</button>
+    </div>
+
   </template>
 
   <!-- Timeline template -->
@@ -81,7 +86,6 @@
     <div class="no-taf">No TAF timeline</div>
   </template>
 
-  <button id="btn-clear-cache">Clear Cache</button>
 
 
   <script src="app.js"></script>
